--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Header Section -->
     <div class="head">
-    <p><img id="icon" src="Gold_Icon.png" alt="Gold_Icon">
+    <p><img id="icon" src="Images/Gold_Icon.png" alt="Gold_Icon">
     <h1>Bismillah Die Cutting Work</h1>
     </div></p>
 
@@ -49,4 +49,5 @@ function Check(){
     </div>
 </body>
 </html>
+
 
